crates/tui/snapshots/fullscreen/collaboration_modes/collaboration_fullscreen_selected.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > draft behind selector                                                       
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
