crates/tui/snapshots/fullscreen/collaboration_modes/collaboration_fullscreen_selector.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Mode ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  Agent        Complete the task                              │        
        │  Plan         Analyze and plan without editing               │        
        │> Debug        Investigate and fix a problem          Current │        
        │  Multitask    Ash delegates and combines results             │        
        │  Ask          Answer questions without editing               │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > draft behind selector                                                       
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Esc to close
