crates/tui/snapshots/fullscreen/collaboration_modes/collaboration_option_error_on_home.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                      Use /mode agent|plan|debug|multitask|ask  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏩  Auto · ← Dashboard · ? for shortcuts
