crates/tui/snapshots/fullscreen/collaboration_modes/cooperation_alias_fullscreen.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render_effort(&app)
---
  .                                                                [Dashboard]

● Multitask enabled. Thinking effort is unchanged.
















  ────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────── test-model (high)

  ⏸ Manual · ← Dashboard · ? for shortcuts
