crates/tui/snapshots/fullscreen/collaboration_modes/effort_boundary_fullscreen_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                             
  ───────────────────────────────────────────────────────── test-model (high)   
                                                                                
  ⏸ 手 动
