crates/tui/snapshots/fullscreen/collaboration_modes/effort_changed_fullscreen_chinese.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                             
  ────────────────────────────────────────────────────────── test-model (max)   
                                                                                
  ⏸ 手 动
