crates/tui/snapshots/fullscreen/collaboration_modes/effort_selector_cancel_restores_draft.snap
---
source: crates/tui/src/app/collaboration_modes_tests.rs
expression: render_effort(&app)
---
  .                                                                [Dashboard]

● Conversation remains visible















  ────────────────────────────────────────────────────────────────────────────
  > keep this draft
    and this line
  ─────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual
